fixed css overlap borders

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,13 +27,15 @@
 }
 
 body {
-    width: 100vw;
+    width: 95%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background: linear-gradient(231deg, rgba(22, 6, 40, 1) 0%, rgba(52, 28, 79, 1) 50%, rgba(88, 7, 125, 1) 100%);
+    margin: 16px;
+    padding: 160px;
 }
 
 .container {
